added more content to intruction and mapped out possible sections

--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Pyplot Package\n",
     "\n",
-    "[Documentation can be found here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.html#:~:text=pyplot%20is%20a%20state%2Dbased,pyplot%20as%20plt%20x%20%3D%20np.)\n",
+    "This notebook aims to give the reader an overview of the Pyplot package, a python library that is used to visualise data. \n",
+    "\n",
+    "[The documentation for this package can be found here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.html#:~:text=pyplot%20is%20a%20state%2Dbased,pyplot%20as%20plt%20x%20%3D%20np.)\n",
     "\n",
     "***"
    ]
@@ -17,7 +19,11 @@
    "id": "639a3bf0-c3d2-422a-b81e-377ecfe532b2",
    "metadata": {},
    "source": [
-    "## Module Imports"
+    "## Module Imports\n",
+    "\n",
+    "The Pyplot package is a sub-package of the matplotlib package. \n",
+    "\n",
+    "To help demonstrate the Pyplot package, the Numpy package is imported. One use of this package is to generate random data that can be used in plots."
    ]
   },
   {
@@ -33,6 +39,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a9fd933",
+   "metadata": {},
+   "source": [
+    "## Simple Plot\n",
+    "The .arange and .sin functions in Numpy return lists of data. The .plot function plots the numbers in these lists on a two dimensional graph. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "742eab6d-c60a-47c9-bccb-8472c480ee17",
@@ -41,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fd6e09b0a0>]"
+       "[<matplotlib.lines.Line2D at 0x2c63d1271f0>]"
       ]
      },
      "execution_count": 2,
@@ -68,20 +83,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83df9976-c23a-4024-afef-77926b0560bd",
+   "cell_type": "markdown",
+   "id": "dbb08b3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Simulating Lotto"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0de448e0-4a2f-4d1a-8caa-d2e1741b9b6c",
+   "cell_type": "markdown",
+   "id": "48f5b597",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Simulating Blackjack"
+   ]
   },
   {
    "cell_type": "markdown",
