Added introduction text to cao notebook. Added import of xml parser

--- a/cao.ipynb
+++ b/cao.ipynb
@@ -1,20 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "db3adf8e-1668-46ea-8727-e8b55443baa8",
+   "metadata": {},
+   "source": [
+    "# CAO Points 2021 analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927f8ce3-f371-405a-9b27-528d799188c0",
+   "metadata": {},
+   "source": [
+    "## Purpose\n",
+    "##### The purpose of this notebook is to analyse the CAO points required for Level 8 courses in 3rd level institutions in Ireland. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe34f25c-c3d5-4c46-9795-837591f52f73",
+   "metadata": {},
+   "source": [
+    "### Library imports\n",
+    "##### The libraries used in the analysis are numpy, pyplot and Element Tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e991403-9923-4de4-b251-ca930da87736",
+   "id": "dbb2b449-cf87-41eb-b6d2-f5f02c114fb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import xml.etree.ElementTree as ET"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ad02e5-be43-485b-96a2-3a1f986e0fab",
+   "id": "e954ac23-0aac-4988-a166-0b5ed0b9bfd0",
    "metadata": {},
    "outputs": [],
    "source": []
