added request library to cao notebook. Tested functions in request library. Added library to requirements file

--- a/cao.ipynb
+++ b/cao.ipynb
@@ -5,7 +5,8 @@
    "id": "db3adf8e-1668-46ea-8727-e8b55443baa8",
    "metadata": {},
    "source": [
-    "# CAO Points 2021 analysis"
+    "# CAO Points 2021 analysis\n",
+    "***"
    ]
   },
   {
@@ -14,7 +15,8 @@
    "metadata": {},
    "source": [
     "## Purpose\n",
-    "##### The purpose of this notebook is to analyse the CAO points required for Level 8 courses in 3rd level institutions in Ireland. "
+    "##### The purpose of this notebook is to analyse the CAO points required for Level 8 courses in 3rd level institutions in Ireland. \n",
+    "##### The data used in this analysis can be found [here](http://www.cao.ie/index.php?page=points&p=2021)."
    ]
   },
   {
@@ -35,13 +37,314 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import xml.etree.ElementTree as ET"
+    "import xml.etree.ElementTree as ET\n",
+    "import requests as rq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e954ac23-0aac-4988-a166-0b5ed0b9bfd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get CAO points URL\n",
+    "resp = rq.get('http://www.cao.ie/index.php?page=points&p=2021')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f47b0107-69c4-448b-a646-702b0ee5dde8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check request status\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6a162f97-5093-4f36-a1ad-ecf67d8eb7ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'<!DOCTYPE html>'\n",
+      "b'<!--[if IE 7]> <html class=\"no-js lt-ie9\" lang=\"en\"> <![endif]-->'\n",
+      "b'<!--[if IE 8]> <html class=\"no-js lt-ie9\" lang=\"en\"> <![endif]-->'\n",
+      "b'<!--[if gt IE 8]><!--> <html class=\"no-js\" lang=\"en\"> <!--<![endif]-->'\n",
+      "b''\n",
+      "b'<head>'\n",
+      "b'  <meta charset=\"UTF-8\" />'\n",
+      "b'  <meta name=\"viewport\" content=\"width=device-width\" />'\n",
+      "b'  <meta name=\"description\" content=\"The Central Applications Office (CAO) processes applications for undergraduate courses in Irish Higher Education Institutions.\" />'\n",
+      "b'  '\n",
+      "b'  <title>Central&nbsp;Applications&nbsp;Office</title>'\n",
+      "b''\n",
+      "b'  <link rel=\"stylesheet\" href=\"include/foundation/css/normalize.css\" />'\n",
+      "b'  <link rel=\"stylesheet\" href=\"include/foundation/css/foundation.min.css\" />'\n",
+      "b'  <link rel=\"stylesheet\" href=\"include/cao14.css\">'\n",
+      "b'  <link rel=\"apple-touch-icon\" href=\"icons/apple-touch-icon.png\">'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"57x57\" href=\"icons/apple-touch-icon-57x57.png\" />'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"114x114\" href=\"icons/apple-touch-icon-114x114.png\" />'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"72x72\" href=\"icons/apple-touch-icon-72x72.png\" />'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"144x144\" href=\"icons/apple-touch-icon-144x144.png\" />'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"60x60\" href=\"icons/apple-touch-icon-60x60.png\" />'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"120x120\" href=\"icons/apple-touch-icon-120x120.png\" />'\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"76x76\" href=\"icons/apple-touch-icon-76x76.png\" />'\n",
+      "b''\n",
+      "b'  <link rel=\"apple-touch-icon-precomposed\" sizes=\"152x152\" href=\"icons/apple-touch-icon-152x152.png\" />'\n",
+      "b'  <link rel=\"icon\" type=\"image/png\" href=\"icons/favicon-196x196.png\" sizes=\"196x196\" />'\n",
+      "b'  <link rel=\"icon\" type=\"image/png\" href=\"icons/favicon-96x96.png\" sizes=\"96x96\" />'\n",
+      "b'  <link rel=\"icon\" type=\"image/png\" href=\"icons/favicon-32x32.png\" sizes=\"32x32\" />'\n",
+      "b'  <link rel=\"icon\" type=\"image/png\" href=\"icons/favicon-16x16.png\" sizes=\"16x16\" />'\n",
+      "b'  <link rel=\"icon\" type=\"image/png\" href=\"icons/favicon-128.png\" sizes=\"128x128\" />'\n",
+      "b'  <meta name=\"application-name\" content=\"Central&nbsp;Applications&nbsp;Office\"/>'\n",
+      "b'  <meta name=\"msapplication-TileColor\" content=\"#FFFFFF\" />'\n",
+      "b'  <meta name=\"msapplication-TileImage\" content=\"icons/mstile-144x144.png\" />'\n",
+      "b'  <meta name=\"msapplication-square70x70logo\" content=\"icons/mstile-70x70.png\" />'\n",
+      "b'  <meta name=\"msapplication-square150x150logo\" content=\"icons/mstile-150x150.png\" />'\n",
+      "b'  <meta name=\"msapplication-wide310x150logo\" content=\"icons/mstile-310x150.png\" />'\n",
+      "b'  <meta name=\"msapplication-square310x310logo\" content=\"icons/mstile-310x310.png\" />'\n",
+      "b'  <link rel=\"image_src\" href=\"icons/fblogo.png\">'\n",
+      "b'  <script src=\"include/foundation/js/vendor/custom.modernizr.js\"></script>  <script src=\"include/foundation/js/vendor/jquery.js\"></script>'\n",
+      "b'  <script>'\n",
+      "b'  function SetCookie(c_name,value,expiredays)'\n",
+      "b'  {'\n",
+      "b'  var exdate=new Date()'\n",
+      "b'\\t\\texdate.setDate(exdate.getDate()+expiredays)'\n",
+      "b'\\t\\tdocument.cookie=c_name+ \"=\" +escape(value)+\"; SameSite=Strict; path=/\"+((expiredays==null) ? \"\" : \";expires=\"+exdate.toGMTString())'\n",
+      "b'  }'\n",
+      "b'  </script></head>'\n",
+      "b'<body>'\n",
+      "b''\n",
+      "b'<div id=\"caoModal\" class=\"reveal-modal\"></div>'\n",
+      "b''\n",
+      "b'<div class=\"top-bar-div hide-for-print\">'\n",
+      "b'    <nav class=\"top-bar hide-for-1000plus\">'\n",
+      "b'      <ul class=\"title-area\">'\n",
+      "b'        <!-- Title Area -->'\n",
+      "b'        <li class=\"name\">'\n",
+      "b'          <h1 class=\"long-title\"><a href=\"#moremenu\">Central&nbsp;Applications&nbsp;Office</a></h1>'\n",
+      "b'\\t\\t  <h1 class=\"short-title\"><a href=\"#moremenu\">CAO</a></h1>'\n",
+      "b'        </li>'\n",
+      "b'        <!-- Remove the class \"menu-icon\" to get rid of menu icon. Take out \"Menu\" to just have icon alone -->'\n",
+      "b'        <li class=\"toggle-topbar menu-icon\"><a href=\"#\"><span>Menu</span></a></li>'\n",
+      "b'      </ul>'\n",
+      "b''\n",
+      "b'\\t\\t<section class=\"top-bar-section\">'\n",
+      "b'\\t\\t'\n",
+      "b'\\t\\t<!-- Right Nav Section -->'\n",
+      "b'\\t\\t<ul class=\"right\"><li class=\"blue\"><a href=\"http://www.cao.ie/index.php\"><i class=\"fi-home\"></i>&nbsp;Home</a></li>'\n",
+      "b'<li class=\"red\"><a href=\"https://www.cao.ie/apply.php?page=myapp\"><i class=\"fi-star\"></i>&nbsp;My Application</a></li>'\n",
+      "b'<li class=\"green\"><a href=\"https://www.cao.ie/apply.php\"><i class=\"fi-clipboard-pencil\"></i>&nbsp;Apply</a></li>'\n",
+      "b'<li class=\"purple\"><a href=\"http://www.cao.ie/courses.php\"><i class=\"fi-page-search\"></i>&nbsp;Courses</a></li>'\n",
+      "b'<li class=\"orange\"><a href=\"http://www.cao.ie/handbook.php\"><i class=\"fi-book\"></i>&nbsp;Handbook</a></li>'\n",
+      "b'<li class=\"yellow\"><a href=\"http://www.cao.ie/index.php?page=contact\"><i class=\"fi-telephone\"></i>&nbsp;Contact</a></li>\\t\\t<li class=\"show-for-small\"><a href=\"#moremenu\"><i class=\"fi-list\"></i>&nbsp;More...</a></li>'\n",
+      "b'\\t\\t</ul>'\n",
+      "b'    </section>'\n",
+      "b'\\t</nav>'\n",
+      "b'  </div>'\n",
+      "b'  <a href=\"#moremenu\" id=\"morelink\" class=\"morelink button secondary\">&#9776;</a>'\n",
+      "b'\\t<div class=\"row hide-for-1000plus\">'\n",
+      "b'    <div class=\"small-12 columns centre\">'\n",
+      "b'      <span id=\"logged-in-small\"></span>      '\n",
+      "b'\\t\\t</div>'\n",
+      "b'  </div><div class=\"eucookielaw hide-for-print\" id=\"eucookielaw\">'\n",
+      "b'<div class=\"row\">'\n",
+      "b'<div class=\"large-10 columns eucookietext\">'\n",
+      "b'<b>Cookie Notice:</b>&nbsp;This site uses cookies to enable users to obtain the best experience from the website. In particular, secure encrypted cookies are necessary to allow secure progression through the various elements of the online \\'apply\\' and \\'my application\\' services. Session cookies are deleted automatically when the browser is closed. If you use the CAO interactive handbook or CAO Virtual Assistant, you will be asked to consent to third party cookies.<br><br>By continuing to use this site you are agreeing to our use of cookies. For more details please see our <a href=\"http://www2.cao.ie/privacy.php\" target=\"_blank\" title=\"Privacy Statement\">privacy statement</a>. For more general information on cookies see <a href=\"http://www.aboutcookies.org/\" target=\"_blank\">http://www.aboutcookies.org/</a><br><br>'\n",
+      "b'</div>'\n",
+      "b'<div class=\"large-2 columns eucookietext\">'\n",
+      "b'<a class=\"button\" id=\"removecookie\">Hide Notice</a>'\n",
+      "b'</div>'\n",
+      "b'</div>'\n",
+      "b'</div>'\n",
+      "b'<script>'\n",
+      "b'\\tif( document.cookie.indexOf(\"eucookie\") ===-1 ){'\n",
+      "b'\\t\\t$(\"#eucookielaw\").show();'\n",
+      "b'\\t}\\t'\n",
+      "b'    $(\"#removecookie\").click(function () {'\n",
+      "b\"\\t\\tSetCookie('eucookie','eucookie',365)\"\n",
+      "b'    $(\"#eucookielaw\").remove();'\n",
+      "b'    });'\n",
+      "b'</script>'\n",
+      "b'<div class=\"menu border-blue show-for-1000plus hide-for-print\">'\n",
+      "b'  <div class=\"row menu-bar\">'\n",
+      "b'\\t<ul class=\"button-group desktop-menu \">'\n",
+      "b'\\t<li><img src=\"images/cao.png\" alt=\"CAO logo\" /></li><li class=\"blue\"><a href=\"http://www.cao.ie/index.php\"><i class=\"fi-home\"></i>&nbsp;Home</a></li>'\n",
+      "b'<li class=\"red\"><a href=\"https://www.cao.ie/apply.php?page=myapp\"><i class=\"fi-star\"></i>&nbsp;My Application</a></li>'\n",
+      "b'<li class=\"green\"><a href=\"https://www.cao.ie/apply.php\"><i class=\"fi-clipboard-pencil\"></i>&nbsp;Apply</a></li>'\n",
+      "b'<li class=\"purple\"><a href=\"http://www.cao.ie/courses.php\"><i class=\"fi-page-search\"></i>&nbsp;Courses</a></li>'\n",
+      "b'<li class=\"orange\"><a href=\"http://www.cao.ie/handbook.php\"><i class=\"fi-book\"></i>&nbsp;Handbook</a></li>'\n",
+      "b'<li class=\"yellow\"><a href=\"http://www.cao.ie/index.php?page=contact\"><i class=\"fi-telephone\"></i>&nbsp;Contact</a></li>\\t</ul>'\n",
+      "b'    </div>'\n",
+      "b'\\t'\n",
+      "b'<script>'\n",
+      "b''\n",
+      "b\"var currenttime = 'Sunday, 17 October 2021 23:47:16'\"\n",
+      "b'var montharray=new Array(\"January\",\"February\",\"March\",\"April\",\"May\",\"June\",\"July\",\"August\",\"September\",\"October\",\"November\",\"December\")'\n",
+      "b'var dayarray=new Array(\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\")'\n",
+      "b'var serverdate=new Date(currenttime)'\n",
+      "b''\n",
+      "b'function padlength(what){'\n",
+      "b'var output=(what.toString().length==1)? \"0\"+what : what'\n",
+      "b'return output'\n",
+      "b'}'\n",
+      "b''\n",
+      "b'function displaytime(){'\n",
+      "b'serverdate.setSeconds(serverdate.getSeconds()+1)'\n",
+      "b'var datestring=padlength(dayarray[serverdate.getDay()]+\", \"+serverdate.getDate())+\" \"+montharray[serverdate.getMonth()]+\" \"+serverdate.getFullYear()'\n",
+      "b'var timestring=padlength(serverdate.getHours())+\":\"+padlength(serverdate.getMinutes())'\n",
+      "b'document.getElementById(\"servertime\").textContent=datestring+\" \"+timestring'\n",
+      "b'}'\n",
+      "b''\n",
+      "b'function printpage(){'\n",
+      "b\"\\talert('Please note that it is your responsibility to ensure your printer is in good working order.');\"\n",
+      "b'\\twindow.print();'\n",
+      "b'}'\n",
+      "b''\n",
+      "b'</script>'\n",
+      "b''\n",
+      "b'  <div class=\"row\">'\n",
+      "b''\n",
+      "b'\\t<div class=\"large-3 columns server-time\">'\n",
+      "b'\\t\\t<span id=\"servertime\" class=\"smalltext\">Sunday, 17 October 2021 23:47</span>'\n",
+      "b'\\t</div>'\n",
+      "b'\\t'\n",
+      "b'\\t<div class=\"large-6 columns centre\">'\n",
+      "b'\\t\\t<span class=\"smalltext\" id=\"logged-in\"></span>'\n",
+      "b'\\t</div>'\n",
+      "b''\n",
+      "b'\\t<div class=\"large-3 columns text-right\">'\n",
+      "b'\\t\\t<span class=\"smalltext\">'\n",
+      "b'\\t\\t\\t<a href=\"http://www.cao.ie/index.php?ln=i\">As Gaeilge</a>'\n",
+      "b'\\t\\t\\t&nbsp;&nbsp;|&nbsp;&nbsp;'\n",
+      "b'\\t\\t\\t<a href=\"javascript:printpage();\">Print Page</a>'\n",
+      "b'\\t\\t</span>'\n",
+      "b'\\t</div>'\n",
+      "b''\n",
+      "b'  </div>'\n",
+      "b'  '\n",
+      "b'\\t  </div>'\n",
+      "b'  <!-- End Header and Nav -->'\n",
+      "b'  '\n",
+      "b'  '\n",
+      "b'  <section class=\"mainandsidebar\">'\n",
+      "b'  '\n",
+      "b'  <div class=\"row mainandsubmenu\">\\t<div class=\"large-10 push-2 columns maincontent\"><H3>Points Required for Entry to 2021 Courses</H3>'\n",
+      "b''\n",
+      "b'<B>Note:</B> points information will be displayed in a new window. To return to this page, simply close the new browser window.'\n",
+      "b'<p></p>'\n",
+      "b'<UL><UL><LI>'\n",
+      "b'Click <a href=\"http://www2.cao.ie/points/l8.php\" TARGET=\"_BLANK\"><u>here</u></A> to see a list of the points required for <b>2021</b> Level 8 courses.'\n",
+      "b'<p></p>'\n",
+      "b'</LI>'\n",
+      "b'<LI>'\n",
+      "b'Click <a href=\"http://www2.cao.ie/points/l76.php\" TARGET=\"_BLANK\"><u>here</u></A> to see a list of the points required for <b>2021</b> Level 7/6 courses.'\n",
+      "b'<p></p>'\n",
+      "b'</LI><LI>'\n",
+      "b'Click <a href=\"http://www2.cao.ie/points/GraduateMedicine2021Round0.pdf\" TARGET=\"_BLANK\"><u>here</u></A> to see a list of the points required for entry to Graduate Medicine courses, <b>Round 0, 2021</b>.'\n",
+      "b'<p></p>'\n",
+      "b'</LI>'\n",
+      "b'<LI>'\n",
+      "b'Click <a href=\"http://www2.cao.ie/points/mat_nur_pts_rndA_2021.pdf\" TARGET=\"_BLANK\"><u>here</u></A> to see a list of the points required for entry to Mature Nursing courses, <b>Round A, 2021</b>.'\n",
+      "b'<p></p>'\n",
+      "b'</LI>'\n",
+      "b''\n",
+      "b'</UL>    </div>'\n",
+      "b' '\n",
+      "b'\\t<div class=\"large-2 pull-10 columns hide-for-print \">'\n",
+      "b'  \\t<ul class=\"side-nav\"><li id=\"moremenu\" class=\"show-for-small text-right\"><a href=\"#\"><i class=\"fi-arrow-up\"></i> Top</a></li><li><a href=\"http://www.cao.ie/index.php?page=hei\">HEI contact details</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=studentresources\">Student Resources</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=downloads\">Downloads</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=importantdates\">Important Dates</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=haq\">Have a Question?</a></li>'\n",
+      "b''\n",
+      "b'<li class=\"divider\"></li><li><a href=\"http://www.cao.ie/index.php?page=mature\">Mature Applicants</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=accessroutes\">Access Routes<br>DARE / HEAR</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=scoring&s=fetac\">QQI FET/FETAC</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=medentry\">Entry to Medicine</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=restrictions\">Restrictions</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=parents\">Info for Parents</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=schools\">Info for Schools</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=mediastats\">Media and Statistics</a></li>'\n",
+      "b''\n",
+      "b'<li class=\"divider\"></li>'\n",
+      "b''\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=privacy\">Data Privacy</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=aboutCAO\">About CAO</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=weblinks\">Useful Links</a></li>'\n",
+      "b'<li><a href=\"http://www.cao.ie/index.php?page=contact\">Contact Us</a></li>'\n",
+      "b''\n",
+      "b'<li class=\"show-for-small divider\"></li>'\n",
+      "b'<li class=\"show-for-small\"><a href=\"http://www.cao.ie/index.php?ln=i\">As Gaeilge</a></li>  \\t</ul>'\n",
+      "b'\\t</div>'\n",
+      "b''\n",
+      "b'  </div>'\n",
+      "b'  '\n",
+      "b'  </section>  <!-- Footer -->'\n",
+      "b'  '\n",
+      "b'  <div class=\"footer-container border-blue hide-for-print\">'\n",
+      "b'  <footer class=\"row centre\">'\n",
+      "b'    <div class=\"twelve columns\">'\n",
+      "b'      <!-- <hr /> -->'\n",
+      "b'      <div class=\"row\"><script>'\n",
+      "b''\n",
+      "b'function openCopyright(URL) {'\n",
+      "b'copyrightWindow=window.open(URL,\"copyrightwindow\",\"toolbar=no,width=650,height=420,status=no,scrollbars=yes,resize=yes,resizable=yes,menubar=no\");'\n",
+      "b'if (window.focus) { copyrightWindow.focus(); }'\n",
+      "b'}'\n",
+      "b''\n",
+      "b'</script>'\n",
+      "b''\n",
+      "b''\n",
+      "b'<div>'\n",
+      "b\"Central Applications Office Ltd. - <span id='footer_a'>Registered in Ireland Number 53983 - Registered Office: Tower House, Eglinton Street, Galway. \"\n",
+      "b'<br /></span><br><a href=\"javascript:openCopyright(\\'http://www2.cao.ie/copyright.php\\');\">Copyright &copy; 2021</a> - All Rights Reserved<span id=\\'footer_b\\'> - <a href=\"http://www2.cao.ie/privacy.php\" target=\"_blank\" title=\"Privacy Statement\">CAO Privacy Statement</a>&nbsp;(b2)'\n",
+      "b'</span></div>'\n",
+      "b''\n",
+      "b'      </div>'\n",
+      "b'    </div> '\n",
+      "b'  </footer>'\n",
+      "b'  </div>  <script src=\"include/foundation/js/vendor/jquery.js\"></script>'\n",
+      "b'  <script src=\"include/foundation/js/foundation.min.js\"></script>'\n",
+      "b'  <script>'\n",
+      "b'    $(document).foundation();'\n",
+      "b'  </script>'\n",
+      "b'  <script src=\"include/js/onscroll.js\"></script>'\n",
+      "b'  <script>window.onscroll = function() {scrollFunction()};</script>'\n",
+      "b'  <script>'\n",
+      "b'\\tsetInterval(\"displaytime()\", 1000);'\n",
+      "b'  </script></body>'\n",
+      "b'</html>'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in resp.iter_lines():\n",
+    "    print(line)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e954ac23-0aac-4988-a166-0b5ed0b9bfd0",
+   "id": "721ae316-cadf-4376-b7d7-22b1a7ec5971",
    "metadata": {},
    "outputs": [],
    "source": []
